[package]
name = "substrate-secret-store"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ansi_term = "0.9"
codec = { package = "parity-scale-codec", version = "1.0.0" }
env_logger = "0.7.0"
futures = "0.3.1"
hex = "0.4"
#jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee.git", features = ["ws"] }
jsonrpsee = { path = "/home/svyatonik/dev/jsonrpsee", features = ["ws"] }
log = "0.4.8"
parking_lot = "0.9"
ethcore-secretstore = { git = "https://github.com/paritytech/secret-store.git", rev = "c8947395190511f532b700323a310ccd765126ae" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.44"
time = "0.1"

[dependencies.sp-core]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "sp-core"

[dependencies.sp-runtime]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "sp-runtime"

[dependencies.frame-system]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "frame-system"
features = ["std"]

[dependencies.pallet-transaction-payment]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "pallet-transaction-payment"
features = ["std"]

[dependencies.node-runtime]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "node-runtime"

[dependencies.node-primitives]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "node-primitives"

[dependencies.ss-primitives]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "ss-primitives"

[dependencies.substrate-secret-store-runtime]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "substrate-secret-store-runtime"

[dependencies.sp-keyring]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "sp-keyring"

[dependencies.sp-version]
git = "https://github.com/svyatonik/substrate"
rev = "f08ee28bab1debb6c0e318af37b86c53b983a102"
package = "sp-version"